# edwardchoffmann.github.io

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  jekyll-gh-pages.yml  quarto-pages.yml
tests/: test_repo.py
website/: _quarto.yml  custom.scss  index.qmd
website/posts/: hawkes-text-messages.qmd
